unpackaged/main/default/objects/Blood_Donor__c/Blood_Donor__c.object-meta.xml
<CustomObject>
    <label>Blood Donor</label>
    <nameField>
        <displayFormat>BD-{0000}</displayFormat>
        <label>Blood Donor id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Donors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>