unpackaged/main/default/objects/Blood_Donor__c/validationRules/Email_id_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_id_Duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>Email_ID__c =  Email_ID__c</errorConditionFormula>
    <errorDisplayField>Email_ID__c</errorDisplayField>
    <errorMessage>Already recorded mail</errorMessage>
</ValidationRule>